# agent-idp-ory

./: .env.hydra.example  .gitignore  .hydra-client.env.example  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  JWT.md  PLAN.md  README-local.md  README.md  SECURITY.md  agent-identity-platform-comparison.docx  agent-identity.md  docker-compose.yml
agent_idp_service/: .env.production.example  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml  pytest.ini
agent_idp_service/app/: config.py  db_store.py  main.py  models.py  policy.py  security.py  store.py
agent_idp_service/tests/: conftest.py
agent_idp_service/tests/e2e/: test_full_flow.py
agent_idp_service/tests/integration/: test_api.py  test_api_branches.py  test_auth_enforcement.py  test_cloud_attestation.py  test_token_type_and_presenter.py  test_wrong_token_types.py
agent_idp_service/tests/unit/: test_config.py  test_db_store.py  test_policy.py  test_policy_opa.py  test_security.py  test_store.py  test_store_and_security_extra.py
examples/incident_manager_demo/: README.md  claude_rca_agent.py  idp_client.py  langgraph_rca_agent.py  openai_rca_agent.py  pyproject.toml  register_all_agents.py
examples/incident_manager_demo/web_ui/: app.py
login_consent_app/: main.py  pyproject.toml  pytest.ini
login_consent_app/templates/: admin_client_form.html  admin_clients.html  admin_login.html  consent.html  login.html
login_consent_app/tests/: conftest.py
login_consent_app/tests/e2e/: test_end_to_end_app_flows.py
login_consent_app/tests/integration/: test_additional_branches.py  test_admin_routes.py  test_auth_routes.py
login_consent_app/tests/unit/: test_helpers.py  test_http_and_startup.py
scripts/: bootstrap_hydra_client.sh  bootstrap_hydra_db.sh  smoke_oauth_flow.sh  start_pg_forwarder.sh  stop_pg_forwarder.sh
sdk/python/agent-idp-sdk/: README.md  pyproject.toml
sdk/python/agent-idp-sdk/src/agent_idp_sdk/: __init__.py  core.py  types.py
sdk/python/agent-idp-sdk/src/agent_idp_sdk/adapters/: __init__.py  base.py  claude_sdk.py  crewai_adapter.py  google_adk.py  langgraph_adapter.py  openai_agents.py
