[project]
name = "login-consent-app"
version = "0.1.0"
description = "Tiny Hydra login+consent app for local integration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
]

[tool.uv]
package = false
