[project]
name = "incident-manager-idp-demo"
version = "0.1.0"
description = "Incident Manager + Agent IdP registration demo for OpenAI Agents, LangGraph, and Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "anyio>=4.0.0",
  "openai-agents>=0.2.9",
  "langgraph>=0.6.0",
  "claude-agent-sdk>=0.1.4",
]

[tool.uv]
package = false
