[project]
name = "incident-manager-idp-demo"
version = "0.1.0"
description = "Incident Manager + Agent IdP registration demo for OpenAI Agents, LangGraph, and Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
  "agent-idp-sdk",
  "anyio>=4.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "openai-agents>=0.2.9",
  "langgraph>=0.6.0",
  "claude-agent-sdk>=0.1.4",
  "uvicorn>=0.30.0",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-idp-sdk = { path = "../../sdk/python/agent-idp-sdk", editable = true }
