[project]
name = "agent-idp-sdk"
version = "0.1.0"
description = "Framework-agnostic SDK for Agent IdP registration and control-plane APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.2.9"]
langgraph = ["langgraph>=0.6.0"]
claude = ["claude-agent-sdk>=0.1.4"]
all = [
  "openai-agents>=0.2.9",
  "langgraph>=0.6.0",
  "claude-agent-sdk>=0.1.4",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_idp_sdk"]
